2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.IntroduceConstant/IntroduceConstantRefactoring.cs:
	  Improved introduce constant.

2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ExtractMethod/VariableLookupVisitor.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Worked on refactoring.

2009-07-13  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring.Rename/RenameHandler.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Worked on refactoring/bound rename to F2.

2009-07-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoringPreviewDialog.cs: Worked
	  on refactoring preview.

2009-07-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring.CreateClass/CreateClassCodeGenerator.cs:
	* MonoDevelop.Refactoring.CreateClass/CreateStructCodeGenerator.cs:
	  Added create struct generator (based on class generator).

2009-07-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.IntegrateTemporaryVariable/IntegrateTemporaryVariableRefactoring.cs:
	  Applied new patch from andrea.

2009-07-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring/Change.cs:
	* MonoDevelop.Refactoring.CreateClass:
	* MonoDevelop.Refactoring/RefactoringService.cs:
	* MonoDevelop.Refactoring/RefactoringOptions.cs:
	* MonoDevelop.Refactoring/RefactoringPreviewDialog.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs:
	* MonoDevelop.Refactoring.CreateClass/CreateClassCodeGenerator.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs: