@@ -42,6 +42,7 @@ using MonoDevelop.Projects.Dom;
 using MonoDevelop.Projects.Dom.Parser;
 using MonoDevelop.Core;
 using MonoDevelop.Core.Gui;
+using Mono.TextEditor;
 
 namespace MonoDevelop.Refactoring.ExtractMethod
 {
@@ -89,7 +90,6 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 			if (member == null)
 				return;
 			ExtractMethodParameters param = new ExtractMethodParameters () {
-				Document = options.Document,
 				DeclaringMember = member,
 				Location = new DomLocation (line, column)
 			};
@@ -100,11 +100,6 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 		
 		public class ExtractMethodParameters 
 		{
-			public Document Document {
-				get;
-				set;
-			}
-			
 			public IMember DeclaringMember {
 				get;
 				set;
@@ -140,6 +135,11 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 				set;
 			}
 			
+			public List<VariableDescriptor> Variables {
+				get;
+				set;
+			}
+			
 			/// <summary>
 			/// The type of the expression, if the text is an expression, otherwise null.
 			/// </summary>
@@ -148,8 +148,8 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 				set;
 			}
 			
-			List<KeyValuePair<string, IReturnType>> parameters = new List<KeyValuePair<string, IReturnType>> ();
-			public List<KeyValuePair<string, IReturnType>> Parameters {
+			List<VariableDescriptor> parameters = new List<VariableDescriptor> ();
+			public List<VariableDescriptor> Parameters {
 				get {
 					return parameters;
 				}
@@ -163,7 +163,7 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 			if (resolver == null || provider == null)
 				return null;
 
-			string text = param.Document.TextEditor.GetText (options.Document.TextEditor.SelectionStartPosition, options.Document.TextEditor.SelectionEndPosition);
+			string text = options.Document.TextEditor.GetText (options.Document.TextEditor.SelectionStartPosition, options.Document.TextEditor.SelectionEndPosition);
 
 			INode result = provider.ParseText (text);
 
@@ -178,10 +178,12 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 						param.ExpressionType = resolveResult.ResolvedType;
 				}
 
-				foreach (KeyValuePair<string, IReturnType> var in visitor.UnknownVariables)
-					param.Parameters.Add (var);
+				foreach (VariableDescriptor varDescr in visitor.VariableList.Where (v => !v.IsDefined)) {
+					param.Parameters.Add (varDescr);
+				}
 				param.ReferencesMember = visitor.ReferencesMember;
-				param.ChangedVariables = visitor.ChangedVariables;
+				param.Variables = new List<VariableDescriptor> (visitor.Variables.Values);
+				param.ChangedVariables = new HashSet<string> (visitor.Variables.Values.Where (v => v.GetsChanged).Select (v => v.Name));
 			}
 			
 			return result;
@@ -191,39 +193,88 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 		{
 			List<Change> result = new List<Change> ();
 			ExtractMethodParameters param = (ExtractMethodParameters)prop;
+			IMember member = param.DeclaringMember;
+			TextEditorData data = options.GetTextEditorData ();
+			int startOffset = data.Document.LocationToOffset (member.BodyRegion.Start.Line, member.BodyRegion.Start.Column);
+			int endOffset = data.Document.LocationToOffset (member.BodyRegion.End.Line, member.BodyRegion.End.Column);
 
-			TextReplaceChange replacement = new TextReplaceChange ();
-			replacement.Description = string.Format (GettextCatalog.GetString ("Substitute selected statement(s) with call to {0}"), param.Name);
-			replacement.FileName = param.Document.FileName;
-			replacement.Offset = param.Document.TextEditor.SelectionStartPosition;
-			replacement.RemovedChars = param.Document.TextEditor.SelectionEndPosition - param.Document.TextEditor.SelectionStartPosition;
+			string text = data.Document.GetTextBetween (startOffset, data.SelectionRange.Offset) + data.Document.GetTextBetween (data.SelectionRange.EndOffset, endOffset);
+			INRefactoryASTProvider provider = options.GetASTProvider ();
+			IResolver resolver = options.GetResolver ();
+			INode parsedNode = provider.ParseText (text);
+			VariableLookupVisitor visitor = new VariableLookupVisitor (resolver, param.Location);
+			parsedNode.AcceptVisitor (visitor, null);
+
 
 			INode node = Analyze (options, param, false);
-			bool oneChangedVariable = param.ChangedVariables.Count == 1 && node is BlockStatement;
+
+			List<VariableDescriptor> changedVariablesUsedOutside = new List<VariableDescriptor> (from v in param.Variables
+				where visitor.Variables.ContainsKey (v.Name) && v.GetsChanged
+				select v);
+			List<VariableDescriptor> variablesToGenerate = new List<VariableDescriptor> (changedVariablesUsedOutside.Where (v => !visitor.Variables[v.Name].IsDefined));
+			if (variablesToGenerate.Count > 0) {
+				TextReplaceChange varGen = new TextReplaceChange ();
+				varGen.Description = GettextCatalog.GetString ("Generate some temporary variables");
+				varGen.FileName = options.Document.FileName;
+				LineSegment line = data.Document.GetLine (Math.Max (0, data.Document.OffsetToLineNumber (data.SelectionRange.Offset) - 1));
+				varGen.Offset = line.Offset + line.EditableLength;
+				varGen.InsertedText = Environment.NewLine + options.GetWhitespaces (options.Document.TextEditor.SelectionStartPosition);
+				foreach (VariableDescriptor var in variablesToGenerate) {
+					TypeReference tr = new TypeReference (var.ReturnType.ToInvariantString ());
+					tr.IsKeyword = true;
+					varGen.InsertedText += provider.OutputNode (options.Dom, new LocalVariableDeclaration (new VariableDeclaration (var.Name, null, tr)));
+				}
+				result.Add (varGen);
+			}
+
+			bool oneChangedVariable = node is BlockStatement;
+			if (oneChangedVariable) {
+				oneChangedVariable = changedVariablesUsedOutside.Count == 1;
+			}
+
 			InvocationExpression invocation = new InvocationExpression (new IdentifierExpression (param.Name));
-			foreach (KeyValuePair<string, IReturnType> var in param.Parameters) {
-				if (!oneChangedVariable && param.ChangedVariables.Contains (var.Key)) {
-					invocation.Arguments.Add (new DirectionExpression (FieldDirection.Ref, new IdentifierExpression (var.Key)));
+			foreach (VariableDescriptor var in param.Parameters) {
+				if (!oneChangedVariable && param.ChangedVariables.Contains (var.Name)) {
+					invocation.Arguments.Add (new DirectionExpression (FieldDirection.Ref, new IdentifierExpression (var.Name)));
 				} else {
-					invocation.Arguments.Add (new IdentifierExpression (var.Key));
+					invocation.Arguments.Add (new IdentifierExpression (var.Name));
 				}
 			}
-			string mimeType = DesktopService.GetMimeTypeForUri (param.Document.FileName);
-			INRefactoryASTProvider provider = RefactoringService.GetASTProvider (mimeType);
+			foreach (VariableDescriptor var in variablesToGenerate) {
+				invocation.Arguments.Add (new DirectionExpression (FieldDirection.Out, new IdentifierExpression (var.Name)));
+			}
+			string mimeType = DesktopService.GetMimeTypeForUri (options.Document.FileName);
+			TypeReference returnType = new TypeReference ("System.Void");
+
 			INode outputNode;
 			if (oneChangedVariable) {
-				outputNode = new ExpressionStatement (new AssignmentExpression (new IdentifierExpression (param.ChangedVariables.First ()), ICSharpCode.NRefactory.Ast.AssignmentOperatorType.Assign, invocation));
+				string name = param.ChangedVariables.First ();
+				returnType = new TypeReference (param.Variables.Find (v => v.Name == name).ReturnType.ToInvariantString ());
+				returnType.IsKeyword = true;
+				if (visitor.VariableList.Any (v => v.Name == name && !v.IsDefined)) {
+					LocalVariableDeclaration varDecl = new LocalVariableDeclaration (returnType);
+					varDecl.Variables.Add (new VariableDeclaration (name, invocation));
+					outputNode = varDecl;
+				} else {
+					outputNode = new ExpressionStatement (new AssignmentExpression (new IdentifierExpression (name), ICSharpCode.NRefactory.Ast.AssignmentOperatorType.Assign, invocation));
+				}
 			} else {
 				outputNode = node is BlockStatement ? (INode)new ExpressionStatement (invocation) : invocation;
 			}
 
-			replacement.InsertedText = options.GetWhitespaces (param.Document.TextEditor.SelectionStartPosition) + provider.OutputNode (options.Dom, outputNode);
+			TextReplaceChange replacement = new TextReplaceChange ();
+			replacement.Description = string.Format (GettextCatalog.GetString ("Substitute selected statement(s) with call to {0}"), param.Name);
+			replacement.FileName = options.Document.FileName;
+			replacement.Offset = options.Document.TextEditor.SelectionStartPosition;
+			replacement.RemovedChars = options.Document.TextEditor.SelectionEndPosition - options.Document.TextEditor.SelectionStartPosition;
+
+			replacement.InsertedText = options.GetWhitespaces (options.Document.TextEditor.SelectionStartPosition) + provider.OutputNode (options.Dom, outputNode);
 			result.Add (replacement);
 
 			TextReplaceChange insertNewMethod = new TextReplaceChange ();
-			insertNewMethod.FileName = param.Document.FileName;
+			insertNewMethod.FileName = options.Document.FileName;
 			insertNewMethod.Description = string.Format (GettextCatalog.GetString ("Create new method {0} from selected statement(s)"), param.Name);
-			insertNewMethod.Offset = param.Document.TextEditor.GetPositionFromLineColumn (param.DeclaringMember.BodyRegion.End.Line, param.DeclaringMember.BodyRegion.End.Column);
+			insertNewMethod.Offset = options.Document.TextEditor.GetPositionFromLineColumn (param.DeclaringMember.BodyRegion.End.Line, param.DeclaringMember.BodyRegion.End.Column);
 
 			MethodDeclaration methodDecl = new MethodDeclaration ();
 			methodDecl.Name = param.Name;
@@ -231,7 +282,7 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 			if (!param.ReferencesMember)
 				methodDecl.Modifier |= ICSharpCode.NRefactory.Ast.Modifiers.Static;
 			if (node is BlockStatement) {
-				methodDecl.TypeReference = new TypeReference ("System.Void");
+				methodDecl.TypeReference = returnType;
 				methodDecl.TypeReference.IsKeyword = true;
 				methodDecl.Body = (BlockStatement)node;
 				if (oneChangedVariable)
@@ -243,15 +294,24 @@ namespace MonoDevelop.Refactoring.ExtractMethod
 				methodDecl.Body.AddChild (new ReturnStatement (node as Expression));
 			}
 
-			foreach (KeyValuePair<string, IReturnType> var in param.Parameters) {
-				TypeReference typeReference = new TypeReference (var.Value.ToInvariantString ());
+			foreach (VariableDescriptor var in param.Parameters) {
+				TypeReference typeReference = new TypeReference (var.ReturnType.ToInvariantString ());
 				typeReference.IsKeyword = true;
-				ParameterDeclarationExpression pde = new ParameterDeclarationExpression (typeReference, var.Key);
-				if (!oneChangedVariable && param.ChangedVariables.Contains (var.Key))
+				ParameterDeclarationExpression pde = new ParameterDeclarationExpression (typeReference, var.Name);
+				if (!oneChangedVariable && param.ChangedVariables.Contains (var.Name))
 					pde.ParamModifier |= ICSharpCode.NRefactory.Ast.ParameterModifiers.Ref;
 				methodDecl.Parameters.Add (pde);
 			}
 
+			foreach (VariableDescriptor var in variablesToGenerate) {
+				TypeReference typeReference = new TypeReference (var.ReturnType.ToInvariantString ());
+				typeReference.IsKeyword = true;
+				ParameterDeclarationExpression pde = new ParameterDeclarationExpression (typeReference, var.Name);
+				if (!oneChangedVariable && param.ChangedVariables.Contains (var.Name))
+					pde.ParamModifier |= ICSharpCode.NRefactory.Ast.ParameterModifiers.Out;
+				methodDecl.Parameters.Add (pde);
+			}
+			
 			insertNewMethod.InsertedText = Environment.NewLine + Environment.NewLine + provider.OutputNode (options.Dom, methodDecl, options.GetIndent (param.DeclaringMember));
 			result.Add (insertNewMethod);
 
