@@ -1,5 +1,12 @@
 2009-07-13  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodDialog.cs:
+	* MonoDevelop.Refactoring.ExtractMethod/VariableLookupVisitor.cs:
+	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
+	  Worked on extract method.
+
+2009-07-13  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Refactoring.IntroduceConstant/IntroduceConstantRefactoring.cs:
 	  Improved introduce constant.
 
